--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <!-- 📊 progress.html へのリンクを追加 -->
         <nav>
           <a href="progress.html">📊 実施状況を見る</a>
+          <a href="columns.html" style="margin-left:8px">📘 コラム</a>
         </nav>
       </header>
 
@@ -210,4 +211,5 @@
   </script>
 </body>
 </html>
+
 
